--- a/package.json
+++ b/package.json
@@ -60,36 +60,36 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "8.0.0-rc.1",
-    "@angular/cdk": "8.0.0-beta.2",
-    "@angular/common": "8.0.0-rc.1",
-    "@angular/compiler": "8.0.0-rc.1",
-    "@angular/core": "8.0.0-rc.1",
-    "@angular/flex-layout": "^7.0.0-beta.24",
-    "@angular/forms": "8.0.0-rc.1",
-    "@angular/material": "8.0.0-beta.2",
-    "@angular/platform-browser": "8.0.0-rc.1",
-    "@angular/platform-browser-dynamic": "8.0.0-rc.1",
-    "@angular/router": "8.0.0-rc.1",
-    "core-js": "^2.5.4",
+    "@angular/animations": "8.0.0",
+    "@angular/cdk": "8.0.0",
+    "@angular/common": "8.0.0",
+    "@angular/compiler": "8.0.0",
+    "@angular/core": "8.0.0",
+    "@angular/flex-layout": "^8.0.0-beta.26",
+    "@angular/forms": "8.0.0",
+    "@angular/material": "8.0.0",
+    "@angular/platform-browser": "8.0.0",
+    "@angular/platform-browser-dynamic": "8.0.0",
+    "@angular/router": "8.0.0",
+    "core-js": "^3.1.3",
     "fake-jwt-sign": "^1.1.0",
     "hammerjs": "^2.0.8",
     "jwt-decode": "^2.2.0",
-    "rxjs": "6.5.1",
-    "ts-enum-util": "^4.0.0",
-    "zone.js": "~0.9.0"
+    "rxjs": "6.5.2",
+    "ts-enum-util": "^4.0.1",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.800.0-rc.1",
-    "@angular/cli": "8.0.0-rc.1",
-    "@angular/compiler-cli": "8.0.0-rc.1",
-    "@angular/language-service": "8.0.0-rc.1",
-    "@types/jasmine": "~3.3.12",
+    "@angular-devkit/build-angular": "~0.800.0",
+    "@angular/cli": "8.0.0",
+    "@angular/compiler-cli": "8.0.0",
+    "@angular/language-service": "8.0.0",
+    "@types/jasmine": "~3.3.13",
     "@types/jasminewd2": "~2.0.6",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/jwt-decode": "^2.2.1",
-    "@types/node": "^11.13.4",
-    "angular-unit-test-helper": "^1.0.0",
+    "@types/node": "^12.0.3",
+    "angular-unit-test-helper": "^1.4.1",
     "codelyzer": "^5.0.1",
     "cross-conf-env": "^1.1.2",
     "dev-norms": "^1.7.0",
@@ -101,19 +101,19 @@
     "jasmine": "^3.4.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "js-beautify": "^1.9.1",
-    "karma": "^4.0.1",
+    "js-beautify": "^1.10.0",
+    "karma": "^4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~2.0.0",
     "karma-coverage-istanbul-reporter": "^2.0.5",
     "karma-htmlfile-reporter": "^0.3.8",
     "karma-jasmine": "^2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "npm-run-all": "^4.1.2",
-    "prettier": "^1.16.4",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^1.17.1",
     "protractor": "^5.4.2",
-    "ts-node": "~8.0.3",
-    "tslint": "^5.12.0",
+    "ts-node": "~8.2.0",
+    "tslint": "^5.16.0",
     "typescript": "^3.4.5"
   },
   "importSort": {
