--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@angular/common": "8.0.0",
     "@angular/compiler": "8.0.0",
     "@angular/core": "8.0.0",
+    "@angular/fire": "^5.2.1",
     "@angular/flex-layout": "^8.0.0-beta.26",
     "@angular/forms": "8.0.0",
     "@angular/material": "8.0.0",
@@ -73,6 +74,7 @@
     "@angular/router": "8.0.0",
     "core-js": "^3.1.3",
     "fake-jwt-sign": "^1.1.0",
+    "firebase": "^6.2.4",
     "hammerjs": "^2.0.8",
     "jwt-decode": "^2.2.0",
     "ngx-mask": "^7.9.10",
