--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,5 +53,6 @@
     "statusBar.background": "#2e7d32",
     "statusBarItem.hoverBackground": "#3ca241",
     "statusBar.foreground": "#e7e7e7"
-  }
+  },
+  "ng-evergreen.checkFrequency": "Daily"
 }
