--- a/package.json
+++ b/package.json
@@ -73,8 +73,12 @@
     "@angular/platform-browser": "8.1.0",
     "@angular/platform-browser-dynamic": "8.1.0",
     "@angular/router": "8.1.0",
+    "@ngrx/data": "^8.1.0",
+    "@ngrx/effects": "^8.1.0",
+    "@ngrx/entity": "^8.1.0",
+    "@ngrx/store": "^8.1.0",
+    "@ngrx/store-devtools": "^8.1.0",
     "core-js": "^3.1.4",
-    "fake-jwt-sign": "^1.1.0",
     "firebase": "^6.2.4",
     "hammerjs": "^2.0.8",
     "jwt-decode": "^2.2.0",
@@ -98,6 +102,7 @@
     "codelyzer": "^5.1.0",
     "cross-conf-env": "^1.1.2",
     "dev-norms": "^1.7.0",
+    "fake-jwt-sign": "^1.1.1",
     "http-server": "^0.11.1",
     "import-sort": "^6.0.0",
     "import-sort-cli": "^6.0.0",
