--- a/package.json
+++ b/package.json
@@ -62,42 +62,42 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "8.2.1",
-    "@angular/cdk": "8.1.1",
+    "@angular/cdk": "8.1.2",
     "@angular/common": "8.2.1",
     "@angular/compiler": "8.2.1",
     "@angular/core": "8.2.1",
     "@angular/fire": "^5.2.1",
     "@angular/flex-layout": "^8.0.0-beta.26",
     "@angular/forms": "8.2.1",
-    "@angular/material": "8.1.1",
+    "@angular/material": "8.1.2",
     "@angular/platform-browser": "8.2.1",
     "@angular/platform-browser-dynamic": "8.2.1",
     "@angular/router": "8.2.1",
-    "@ngrx/data": "^8.1.0",
-    "@ngrx/effects": "^8.1.0",
-    "@ngrx/entity": "^8.1.0",
-    "@ngrx/store": "^8.1.0",
-    "@ngrx/store-devtools": "^8.1.0",
-    "core-js": "^3.1.4",
-    "firebase": "^6.3.1",
+    "@ngrx/data": "^8.2.0",
+    "@ngrx/effects": "^8.2.0",
+    "@ngrx/entity": "^8.2.0",
+    "@ngrx/store": "^8.2.0",
+    "@ngrx/store-devtools": "^8.2.0",
+    "core-js": "^3.2.0",
+    "firebase": "^6.3.5",
     "hammerjs": "^2.0.8",
     "jwt-decode": "^2.2.0",
-    "ngx-mask": "^8.0.1",
+    "ngx-mask": "^8.0.3",
     "rxjs": "6.5.2",
     "subsink": "^1.0.0",
     "ts-enum-util": "^4.0.1",
-    "zone.js": "~0.9.1"
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.802.1",
     "@angular/cli": "8.2.1",
     "@angular/compiler-cli": "8.2.1",
     "@angular/language-service": "8.2.1",
-    "@types/jasmine": "~3.3.14",
+    "@types/jasmine": "~3.4.0",
     "@types/jasminewd2": "~2.0.6",
-    "@types/jsonwebtoken": "^8.3.2",
+    "@types/jsonwebtoken": "^8.3.3",
     "@types/jwt-decode": "^2.2.1",
-    "@types/node": "^12.6.8",
+    "@types/node": "^12.7.1",
     "angular-unit-test-helper": "^1.4.1",
     "codelyzer": "^5.1.0",
     "cross-conf-env": "^1.1.2",
@@ -111,11 +111,11 @@
     "jasmine": "^3.4.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "js-beautify": "^1.10.1",
+    "js-beautify": "^1.10.2",
     "karma": "^4.2.0",
     "karma-chrome-launcher": "~3.0.0",
     "karma-cli": "~2.0.0",
-    "karma-coverage-istanbul-reporter": "^2.0.5",
+    "karma-coverage-istanbul-reporter": "^2.1.0",
     "karma-edge-launcher": "^0.4.2",
     "karma-htmlfile-reporter": "^0.3.8",
     "karma-jasmine": "^2.0.1",
