--- a/package.json
+++ b/package.json
@@ -113,7 +113,7 @@
     "jasmine-spec-reporter": "~4.2.1",
     "js-beautify": "^1.10.2",
     "karma": "^4.3.0",
-    "karma-chrome-launcher": "~3.1.0",
+    "karma-chrome-launcher": "^3.1.0",
     "karma-cli": "~2.0.0",
     "karma-coverage-istanbul-reporter": "^2.1.0",
     "karma-edge-launcher": "^0.4.2",
