--- a/package.json
+++ b/package.json
@@ -61,18 +61,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "8.2.13",
+    "@angular/animations": "9.0.0-rc.0",
     "@angular/cdk": "8.2.3",
-    "@angular/common": "8.2.13",
-    "@angular/compiler": "8.2.13",
-    "@angular/core": "8.2.13",
+    "@angular/common": "9.0.0-rc.0",
+    "@angular/compiler": "9.0.0-rc.0",
+    "@angular/core": "9.0.0-rc.0",
     "@angular/fire": "^5.2.1",
     "@angular/flex-layout": "^8.0.0-beta.27",
-    "@angular/forms": "8.2.13",
+    "@angular/forms": "9.0.0-rc.0",
     "@angular/material": "8.2.3",
-    "@angular/platform-browser": "8.2.13",
-    "@angular/platform-browser-dynamic": "8.2.13",
-    "@angular/router": "8.2.13",
+    "@angular/platform-browser": "9.0.0-rc.0",
+    "@angular/platform-browser-dynamic": "9.0.0-rc.0",
+    "@angular/router": "9.0.0-rc.0",
     "@ngrx/data": "^8.4.0",
     "@ngrx/effects": "^8.4.0",
     "@ngrx/entity": "^8.4.0",
@@ -86,13 +86,13 @@
     "rxjs": "6.5.3",
     "subsink": "^1.0.0",
     "ts-enum-util": "^4.0.1",
-    "zone.js": "^0.9.1"
+    "zone.js": "^0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.17",
-    "@angular/cli": "8.3.17",
-    "@angular/compiler-cli": "8.2.13",
-    "@angular/language-service": "8.2.13",
+    "@angular-devkit/build-angular": "~0.900.0-rc.0",
+    "@angular/cli": "9.0.0-rc.0",
+    "@angular/compiler-cli": "9.0.0-rc.0",
+    "@angular/language-service": "9.0.0-rc.0",
     "@types/jasmine": "~3.4.2",
     "@types/jasminewd2": "~2.0.8",
     "@types/jsonwebtoken": "^8.3.4",
@@ -126,7 +126,7 @@
     "protractor": "^5.4.2",
     "ts-node": "~8.4.1",
     "tslint": "^5.20.0",
-    "typescript": "^3.5.3"
+    "typescript": "^3.6.4"
   },
   "importSort": {
     ".ts, .tsx": {
